       classes using the "__mapper_cls__" property.

- mssql
     - Reflected tables will now automatically load other tables 
       which are referenced by Foreign keys in the auto-loaded
       table, [ticket:979]. 

     - Added executemany check to skip identity fetch, [ticket:916].

     - Added stubs for small date type, [ticket:884]

     - Improvements to pyodbc + Unix. If you couldn't get that
       combination to work before, please try again.

     
0.4.4
------
- sql
    - Can again create aliases of selects against textual FROM
      clauses, [ticket:975]

    - The value of a bindparam() can be a callable, in which
      case it's evaluated at statement execution time to get the
      value.

    - Added exception wrapping/reconnect support to result set
      fetching.  Reconnect works for those databases that raise
      a catchable data error during results (i.e. doesn't work
      on MySQL) [ticket:978]

    - Implemented two-phase API for "threadlocal" engine, via
      engine.begin_twophase(), engine.prepare() [ticket:936]

    - Fixed bug which was preventing UNIONS from being
      cloneable, [ticket:986]

    - Added "bind" keyword argument to insert(), update(),
      delete() and DDL(). The .bind property is now assignable
      on those statements as well as on select().

    - Insert statements can now be compiled with extra "prefix"
      words between INSERT and INTO, for vendor extensions like
      MySQL's INSERT IGNORE INTO table.

- orm
    - any(), has(), contains(), ~contains(), attribute level ==
      and != now work properly with self-referential relations -
      the clause inside the EXISTS is aliased on the "remote"
      side to distinguish it from the parent table.  This
      applies to single table self-referential as well as
      inheritance-based self-referential.

    - Repaired behavior of == and != operators at the relation()
      level when compared against NULL for one-to-one relations
      [ticket:985]
